preloader and slightly improve js

--- a/index.html
+++ b/index.html
@@ -188,7 +188,23 @@
         </div>
       </section>
     </div>
-
+    <div class="loader-overlay">
+      <div class="wrap-loader">
+        <div class="loader">
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="box"></div>
+          <div class="wrap-text">
+            <div class="text">
+              <span>T</span><span>E</span><span>S</span><span>L</span
+              ><span>A</span><span>🚗</span><span>🌎</span><span>....</span>
+            </div>
+          </div>
+        </div>
+        <div class="loader-text">wait please</div>
+      </div>
+    </div>
     <script src="script/script.js"></script>
     <script
       type="module"
